# hatch-bgd

./: README.md  pyproject.toml
.github/workflows/: build.yml
hatch_bgd/: hooks.py  version_source.py
