[build-system]
requires = ["hatchling>=1.1.0"]
build-backend = "hatchling.build"

[project]
name = "hatch-bgd"
dynamic = ["version"]
description = '​base version, ​latest Git commit ID, and ​latest update date.'
readme = "README.md"
license = { text = "MIT" }
requires-python = ">= 3.8"
keywords = [
  "git",
  "hatch",
  "plugin",
  "version",
]
authors = [
  { name = "TownWish", email = "townwish2023@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "hatchling>=1.1.0",
]

[project.urls]
Source = "https://github.com/townwish4git/hatch-bgd"

[project.entry-points.hatch]
bgd = "hatch_bgd.hooks"

[tool.hatch.version]
path = "hatch_bgd/__about__.py"

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "FBT",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "T",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Ignore McCabe complexity
  "C901",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore noisy checks for insecure subprocess calls
  "S603", "S607",
  # Boolean default values
  "FBT002",
]

[tool.ruff.lint.isort]
known-first-party = ["hatch_bgd"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use relative imports and assertions
"tests/**/*" = ["TID252", "S101"]

[tool.mypy]
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.coverage.run]
source_pkgs = ["hatch_bgd"]
branch = true
parallel = true
omit = [
  "hatch_bgd/__about__.py",
]

[tool.coverage.paths]
hatch_bgd = ["hatch_bgd", "*/hatch-bgd/hatch_bgd"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
